# catmap

./: CHANGELOG.md  README.md  catmap.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: catmap-0.1.0.0-inplace.conf  package.cache
