cabal-version:      2.4
name:               catmap
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:   catroidvanias dungeon map program

-- A longer description of the package.
description:    catroidvanias dungeon map program to learn cabal

-- A URL where users can report bugs.
bug-reports:    https://github.com/Catroidvania/catmap

-- The license under which the package is released.
-- license:
author:             catroidvania
maintainer:         5m4rt.tr45h@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md README.md LICENSE

executable catmap
    ghc-options:    -O2 -threaded
    main-is:        Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>= 4.14.3.0, gloss ^>= 1.13.2.2, directory ^>= 1.3.6.0

    hs-source-dirs:   app
    default-language: Haskell2010
